--- a/web/css/main.css
+++ b/web/css/main.css
@@ -979,7 +979,7 @@ body:not(.open-search) .search{
     margin-left: 15px;
     width: 300px;
     background-color: #ffffff;
-    height: 200px;
+    min-height: 400px;
     box-shadow: 0px 2px 0px 0px #cdced0;
     border-radius: 3px;
 }
