--- a/web/css/min-950px.css
+++ b/web/css/min-950px.css
@@ -155,7 +155,28 @@
     }
 
     .--top-50px{
+        margin-top: -30px;
+    }
+
+    .--top-30px{
         margin-top: 0px;
+    }
+
+    .--top-20px{
+        margin-top: 0px;
+    }
+
+    .--top-30px-30px{
+        margin-top: 30px;
+    }
+
+    .only-mobile{
+        display: block;
+        margin-top: 30px;
+    }
+    .baner{
+        display: flex;
+        justify-content: center;
     }
 
 }
