--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6270,6 +6270,6 @@ form .field-input:first-child{
     max-height: 500px;
 }
 
-.only-mobile{
-    display: none;
+.--100px-30px{
+    margin-top: 100px;
 }
