--- a/web/css/min-950px.css
+++ b/web/css/min-950px.css
@@ -170,10 +170,10 @@
         margin-top: 30px;
     }
 
-    .only-mobile{
-        display: block;
-        margin-top: 30px;
+    .--100px-30px{
+        margin-top: 100px;
     }
+
     .baner{
         display: flex;
         justify-content: center;
