--- a/web/css/main-media.css
+++ b/web/css/main-media.css
@@ -51,3 +51,28 @@
         margin-top: 20px;
     }
 }
+
+@media (max-width: 800px) {
+    .--with-message{
+        width: 500px;
+        left: calc(50% - 250px);
+        top: 0px;
+    }
+
+    .block-columns-popup-authentication{
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .left-column{
+        width: 100%;
+    }
+}
+
+@media (max-width: 530px) {
+    .--with-message{
+        width: 100%;
+        left: 0px;
+    }
+
+}
