--- a/web/css/min-950px.css
+++ b/web/css/min-950px.css
@@ -37,7 +37,8 @@
     .block-news-container,
     .container-cards-promo,
     .container-promo-statistic,
-    .block-flex-white.inside{
+    .block-flex-white.inside,
+    .std-container{
         width: 100%
     }
     .block-info-for-owner{
